made a margin relative to prevent bugs on mobile

--- a/markdown-previewer/style/main.scss
+++ b/markdown-previewer/style/main.scss
@@ -17,7 +17,7 @@ body {
   height: 500px;
 
   div {
-    margin: 0 20px;
+    margin: 0 2%;
     height: inherit;
     width: 45%;
     display: inline-block;
